src/ts/tests/fixtures/invalid_include_tree/data_source.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition
import { IncludeTree } from "../../../src/ui/backend";

@Model()
export class Foo {
  id: number;

  foo: IncludeTree<Foo> = {};
}
